# cacp

./: METHOD.md  README.md  ctx.py  handoff.md  install.ps1  install.py  install.sh  pyproject.toml  rlm.py
docs/: design.md  measurement-protocol.md
memory/: MEMORY.md  changelog.md  decisions.md  investigations.md
scripts/: ab_real.py
templates/: AGENT_CONTEXT.md
templates/adapters/: AGENTS.md  CLAUDE.md
tests/: test_ctx_memory.py  test_ctx_session.py  test_installer.py
