[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-cacp"
version = "0.1.0"
description = "CACP: the Cache-Aware Context Protocol — a cache-stable startup packet, tiered context admission, local durable-memory retrieval, and real provider-usage measurement for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "renf0x" }]
keywords = ["llm", "agents", "context", "tokens", "prompt-caching", "obsidian"]

# Core is stdlib-only. `anthropic` is used opportunistically for exact token
# counts (ctx count) and stays optional.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]

[project.urls]
Homepage = "https://github.com/renf0x/ctx-agent-context-stack"
Repository = "https://github.com/renf0x/ctx-agent-context-stack"

# Installs the global `ctx` command so the toolkit resolves from any folder. A
# local `ctx.py` copy dropped by install.py still takes priority when present.
[project.scripts]
ctx = "ctx:main"

[tool.setuptools]
py-modules = ["ctx"]
